# personal-portfolio

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
src/streamlit_app/assets/css/: style.css
